--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 	padding-left: 5px;
 	padding-right: 5px;
 	-webkit-box-pack: justify;
-	justify-content: space-between;
+	justify-content: space-around;
 }
 .indicator {
 	display: -webkit-box;
